Fix layout spacing in general

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 
 @layer utilities {
   .container {
-    @apply max-w-[90%] xl:max-w-[72rem] mx-auto;
+    @apply max-w-[80%] xl:max-w-[72rem] mx-auto;
   }
 
   .sec-heading {
